--- a/webDesign/css/main1.css
+++ b/webDesign/css/main1.css
@@ -176,7 +176,7 @@ ul:after {clear: both; content: ""; display: block;}
 .main_02 .upslide ul li {display: block; height: 100%; overflow: hidden;}
 .main_02 .upslide ul li span {display: block; width: 100%; height: 100%; background-size: cover;}
 
-.main_02 .upslide ul li .up01 { background-image: url(https://kaihyperion.github.io/cs130/webDesign/video/clean-group.gif);}
+.main_02 .upslide ul li .up01 { background-image: url("https://kaihyperion.github.io/cs130/webDesign/video/clean-group.gif");}
 
 
 .main_02 .downslide {width: 50%; float: right; height: 50%;}
