--- a/webDesign/css/main1.css
+++ b/webDesign/css/main1.css
@@ -151,10 +151,10 @@ ul:after {clear: both; content: ""; display: block;}
 
 .Main .slide li.slide2 .bg:before {background: rgba(0, 0, 0, 0.4); width: 100%; height: 100%; position: absolute; left: 0; top: 0; content: ""; z-index: -1;}
 
-.Main .slide li.slide2 .bg {background-image: url(/images/good_team.jpeg);}
+.Main .slide li.slide2 .bg {background-image: url("https://kaihyperion.github.io/cs130/webDesign/images/good_team.jpeg");}
 .Main .slide li.slide3 .bg:before {background: rgba(0,0,0,.6); width: 100%; height: 100%; position: absolute; left: 0; top: 0; content: ""; z-index: -1;}
 
-.Main .slide li.slide3 .bg {background-image: url(/images/image1.jpeg);}
+.Main .slide li.slide3 .bg {background-image: url("https://kaihyperion.github.io/cs130/webDesign/images/image1.jpeg");}
 
 
 
@@ -180,9 +180,9 @@ ul:after {clear: both; content: ""; display: block;}
 .main_02 .leftslide .swiper-wrapper li {display: block; height: 100%; overflow: hidden;}
 .main_02 .leftslide .swiper-wrapper li span {background-position: center; display: block; width: 100%; height: 100%; object-fit:none;}
 
-.main_02 .leftslide .swiper-wrapper  li .img01 { background-image: url(/images/front_entrance.jpeg);background-size:cover;}
+.main_02 .leftslide .swiper-wrapper  li .img01 { background-image: url("https://kaihyperion.github.io/cs130/webDesign/images/front_entrance.jpeg");background-size:cover;}
 .main_02 .leftslide .swiper-wrapper  li .img02 { background-image: url("https://kaihyperion.github.io/cs130/webDesign/images/image2.jpeg"); background-size:cover;}
-.main_02 .leftslide .swiper-wrapper  li .img03 { background-image: url(/images/banner.jpeg); background-size:cover;}
+.main_02 .leftslide .swiper-wrapper  li .img03 { background-image: url("https://kaihyperion.github.io/cs130/webDesign/images/banner.jpeg"); background-size:cover;}
 
 .main_02 .leftslide .button {position: absolute; right: 40px; top: 50%; transform: translateY(-50%); z-index: 999;}
 .main_02 .leftslide .button button {cursor: pointer; background: none; border: none;}
